--- a/Assets/style.css
+++ b/Assets/style.css
@@ -45,7 +45,7 @@ header{
     border: 2px solid var(--primary-color);
     padding: 0.6rem 1rem;
     margin: 1rem 1rem;;
-    border-radius: 3px;
+    border-radius: 5px;
     font-size: 1rem;
     color: var(--highlight-color);
 }
@@ -82,6 +82,8 @@ ul li{
 
 ul li:hover{
     color: var(--highlight-color);
+    background: var(--primary-color);
+    border-radius: 10px;
 }
 
 h3{
@@ -114,6 +116,7 @@ main{
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 130px;
+    overflow-x: hidden;
 }
 
 .popular{
